pack/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> function_definition
Rule 5     function_definition -> type_specifier_opt declarator compound_statement
Rule 6     global_declaration -> declaration
Rule 7     type_specifier_opt -> type_specifier
Rule 8     type_specifier_opt -> empty
Rule 9     declaration_list -> declaration
Rule 10    declaration_list -> declaration_list declaration
Rule 11    type_specifier -> VOID
Rule 12    type_specifier -> CHAR
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> FLOAT
Rule 15    declarator -> pointer direct_declarator
Rule 16    declarator -> direct_declarator
Rule 17    pointer -> TIMES
Rule 18    pointer -> TIMES pointer
Rule 19    constant_expression_opt -> constant_expression
Rule 20    constant_expression_opt -> empty
Rule 21    direct_declarator -> LPAREN declarator RPAREN
Rule 22    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 23    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 24    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 25    direct_declarator -> identifier
Rule 26    identifier_list_opt -> identifier_list
Rule 27    identifier_list_opt -> empty
Rule 28    identifier_list -> identifier
Rule 29    identifier_list -> identifier_list identifier
Rule 30    identifier -> ID
Rule 31    constant_expression -> binary_expression
Rule 32    binary_expression -> cast_expression
Rule 33    binary_expression -> binary_expression TIMES binary_expression
Rule 34    binary_expression -> binary_expression DIV binary_expression
Rule 35    binary_expression -> binary_expression MOD binary_expression
Rule 36    binary_expression -> binary_expression PLUS binary_expression
Rule 37    binary_expression -> binary_expression MINUS binary_expression
Rule 38    binary_expression -> binary_expression LT binary_expression
Rule 39    binary_expression -> binary_expression LTE binary_expression
Rule 40    binary_expression -> binary_expression GT binary_expression
Rule 41    binary_expression -> binary_expression GTE binary_expression
Rule 42    binary_expression -> binary_expression EQ binary_expression
Rule 43    binary_expression -> binary_expression NOT_EQUAL binary_expression
Rule 44    binary_expression -> binary_expression AND binary_expression
Rule 45    binary_expression -> binary_expression OR binary_expression
Rule 46    cast_expression -> unary_expression
Rule 47    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 48    unary_expression -> postfix_expression
Rule 49    unary_expression -> PLUSPLUS unary_expression
Rule 50    unary_expression -> MINUSMINUS unary_expression
Rule 51    unary_expression -> unary_operator cast_expression
Rule 52    postfix_expression -> primary_expression
Rule 53    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 54    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 55    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 56    postfix_expression -> postfix_expression PLUSPLUS
Rule 57    postfix_expression -> postfix_expression MINUSMINUS
Rule 58    string_constant -> STRING
Rule 59    primary_expression -> identifier
Rule 60    primary_expression -> constant
Rule 61    primary_expression -> string_constant
Rule 62    primary_expression -> LPAREN expression RPAREN
Rule 63    constant -> INT_CONST
Rule 64    constant -> CHAR_CONST
Rule 65    constant -> FLOAT_CONST
Rule 66    expression -> assignment_expression
Rule 67    expression -> expression COMMA assignment_expression
Rule 68    argument_expression -> assignment_expression
Rule 69    argument_expression -> argument_expression COMMA assignment_expression
Rule 70    assignment_expression -> binary_expression
Rule 71    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 72    assignment_operator -> EQUALS
Rule 73    assignment_operator -> TIMES_EQUALS
Rule 74    assignment_operator -> DIV_EQUALS
Rule 75    assignment_operator -> MOD_EQUALS
Rule 76    assignment_operator -> PLUS_EQUALS
Rule 77    assignment_operator -> MINUS_EQUALS
Rule 78    unary_operator -> ADDRESS
Rule 79    unary_operator -> TIMES
Rule 80    unary_operator -> PLUS
Rule 81    unary_operator -> MINUS
Rule 82    unary_operator -> NOT
Rule 83    parameter_list -> parameter_declaration
Rule 84    parameter_list -> parameter_list COMMA parameter_declaration
Rule 85    parameter_declaration -> type_specifier declarator
Rule 86    decl_body -> type_specifier_opt init_declarator_list_opt
Rule 87    declaration -> decl_body SEMI
Rule 88    init_declarator_list_opt -> init_declarator_list
Rule 89    init_declarator_list_opt -> empty
Rule 90    init_declarator_list -> init_declarator
Rule 91    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 92    init_declarator -> declarator
Rule 93    init_declarator -> declarator EQUALS initializer
Rule 94    initializer -> assignment_expression
Rule 95    initializer -> LBRACE initializer_list RBRACE
Rule 96    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 97    initializer_list -> initializer
Rule 98    initializer_list -> initializer_list COMMA initializer
Rule 99    compound_statement -> LBRACE block_item_list_opt RBRACE
Rule 100   block_item_list_opt -> block_item_list
Rule 101   block_item_list_opt -> empty
Rule 102   block_item_list -> block_item
Rule 103   block_item_list -> block_item_list block_item
Rule 104   block_item -> statement
Rule 105   block_item -> declaration
Rule 106   statement -> expression_statement
Rule 107   statement -> compound_statement
Rule 108   statement -> selection_statement
Rule 109   statement -> iteration_statement
Rule 110   statement -> jump_statement
Rule 111   statement -> assert_statement
Rule 112   statement -> print_statement
Rule 113   statement -> read_statement
Rule 114   expression_statement -> expression_opt SEMI
Rule 115   expression_opt -> expression
Rule 116   expression_opt -> empty
Rule 117   selection_statement -> IF LPAREN expression RPAREN statement
Rule 118   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 119   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 120   iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 121   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 122   jump_statement -> BREAK SEMI
Rule 123   jump_statement -> RETURN expression SEMI
Rule 124   jump_statement -> RETURN SEMI
Rule 125   assert_statement -> ASSERT expression SEMI
Rule 126   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 127   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 128   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 78
AND                  : 44
ASSERT               : 125
BREAK                : 122
CHAR                 : 12
CHAR_CONST           : 64
COMMA                : 67 69 84 91 96 98
DIV                  : 34
DIV_EQUALS           : 74
ELSE                 : 118
EQ                   : 42
EQUALS               : 72 93
FLOAT                : 14
FLOAT_CONST          : 65
FOR                  : 120 121
GT                   : 40
GTE                  : 41
ID                   : 30
IF                   : 117 118
INT                  : 13
INT_CONST            : 63
LBRACE               : 95 96 99
LBRACKET             : 22 53
LPAREN               : 21 23 24 47 54 55 62 117 118 119 120 121 126 127
LT                   : 38
LTE                  : 39
MINUS                : 37 81
MINUSMINUS           : 50 57
MINUS_EQUALS         : 77
MOD                  : 35
MOD_EQUALS           : 75
NOT                  : 82
NOT_EQUAL            : 43
OR                   : 45
PLUS                 : 36 80
PLUSPLUS             : 49 56
PLUS_EQUALS          : 76
PRINT                : 126
RBRACE               : 95 96 99
RBRACKET             : 22 53
READ                 : 127
RETURN               : 123 124
RPAREN               : 21 23 24 47 54 55 62 117 118 119 120 121 126 127
SEMI                 : 87 114 120 121 121 122 123 124 125 126 127
STRING               : 58
TIMES                : 17 18 33 79
TIMES_EQUALS         : 73
VOID                 : 11
WHILE                : 119
error                : 

Nonterminals, with rules where they appear

argument_expression  : 54 69 127
assert_statement     : 111
assignment_expression : 66 67 68 69 71 94
assignment_operator  : 71
binary_expression    : 31 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 70
block_item           : 102 103
block_item_list      : 100 103
block_item_list_opt  : 99
cast_expression      : 32 47 51
compound_statement   : 5 107
constant             : 60
constant_expression  : 19
constant_expression_opt : 22
decl_body            : 87
declaration          : 6 9 10 105 120
declaration_list     : 10
declarator           : 5 21 85 92 93
direct_declarator    : 15 16 22 23 24
empty                : 8 20 27 89 101 116
expression           : 53 62 67 115 117 118 119 123 125
expression_opt       : 114 120 120 121 121 121 126
expression_statement : 106
function_definition  : 4
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 25 28 29 59
identifier_list      : 26 29
identifier_list_opt  : 24
init_declarator      : 90 91
init_declarator_list : 88 91
init_declarator_list_opt : 86
initializer          : 93 97 98
initializer_list     : 95 96 98
iteration_statement  : 109
jump_statement       : 110
parameter_declaration : 83 84
parameter_list       : 23 84
pointer              : 15 18
postfix_expression   : 48 53 54 55 56 57
primary_expression   : 52
print_statement      : 112
program              : 0
read_statement       : 113
selection_statement  : 108
statement            : 104 117 118 118 119 120 121
string_constant      : 61
type_specifier       : 7 47 85
type_specifier_opt   : 5 86
unary_expression     : 46 49 50 71
unary_operator       : 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . function_definition
    (6) global_declaration -> . declaration
    (5) function_definition -> . type_specifier_opt declarator compound_statement
    (87) declaration -> . decl_body SEMI
    (7) type_specifier_opt -> . type_specifier
    (8) type_specifier_opt -> . empty
    (86) decl_body -> . type_specifier_opt init_declarator_list_opt
    (11) type_specifier -> . VOID
    (12) type_specifier -> . CHAR
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (128) empty -> .

    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    TIMES           reduce using rule 128 (empty -> .)
    LPAREN          reduce using rule 128 (empty -> .)
    ID              reduce using rule 128 (empty -> .)
    SEMI            reduce using rule 128 (empty -> .)

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier_opt             shift and go to state 6
    decl_body                      shift and go to state 7
    type_specifier                 shift and go to state 8
    empty                          shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . function_definition
    (6) global_declaration -> . declaration
    (5) function_definition -> . type_specifier_opt declarator compound_statement
    (87) declaration -> . decl_body SEMI
    (7) type_specifier_opt -> . type_specifier
    (8) type_specifier_opt -> . empty
    (86) decl_body -> . type_specifier_opt init_declarator_list_opt
    (11) type_specifier -> . VOID
    (12) type_specifier -> . CHAR
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (128) empty -> .

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    TIMES           reduce using rule 128 (empty -> .)
    LPAREN          reduce using rule 128 (empty -> .)
    ID              reduce using rule 128 (empty -> .)
    SEMI            reduce using rule 128 (empty -> .)

    global_declaration             shift and go to state 14
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier_opt             shift and go to state 6
    decl_body                      shift and go to state 7
    type_specifier                 shift and go to state 8
    empty                          shift and go to state 9

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    SEMI            reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> function_definition .

    VOID            reduce using rule 4 (global_declaration -> function_definition .)
    CHAR            reduce using rule 4 (global_declaration -> function_definition .)
    INT             reduce using rule 4 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (global_declaration -> function_definition .)
    TIMES           reduce using rule 4 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 4 (global_declaration -> function_definition .)
    ID              reduce using rule 4 (global_declaration -> function_definition .)
    SEMI            reduce using rule 4 (global_declaration -> function_definition .)
    $end            reduce using rule 4 (global_declaration -> function_definition .)


state 5

    (6) global_declaration -> declaration .

    VOID            reduce using rule 6 (global_declaration -> declaration .)
    CHAR            reduce using rule 6 (global_declaration -> declaration .)
    INT             reduce using rule 6 (global_declaration -> declaration .)
    FLOAT           reduce using rule 6 (global_declaration -> declaration .)
    TIMES           reduce using rule 6 (global_declaration -> declaration .)
    LPAREN          reduce using rule 6 (global_declaration -> declaration .)
    ID              reduce using rule 6 (global_declaration -> declaration .)
    SEMI            reduce using rule 6 (global_declaration -> declaration .)
    $end            reduce using rule 6 (global_declaration -> declaration .)


state 6

    (5) function_definition -> type_specifier_opt . declarator compound_statement
    (86) decl_body -> type_specifier_opt . init_declarator_list_opt
    (15) declarator -> . pointer direct_declarator
    (16) declarator -> . direct_declarator
    (88) init_declarator_list_opt -> . init_declarator_list
    (89) init_declarator_list_opt -> . empty
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (25) direct_declarator -> . identifier
    (90) init_declarator_list -> . init_declarator
    (91) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (128) empty -> .
    (30) identifier -> . ID
    (92) init_declarator -> . declarator
    (93) init_declarator -> . declarator EQUALS initializer

    TIMES           shift and go to state 21
    LPAREN          shift and go to state 22
    SEMI            reduce using rule 128 (empty -> .)
    ID              shift and go to state 25

    declarator                     shift and go to state 15
    init_declarator_list_opt       shift and go to state 16
    pointer                        shift and go to state 17
    direct_declarator              shift and go to state 18
    init_declarator_list           shift and go to state 19
    empty                          shift and go to state 20
    identifier                     shift and go to state 23
    init_declarator                shift and go to state 24

state 7

    (87) declaration -> decl_body . SEMI

    SEMI            shift and go to state 26


state 8

    (7) type_specifier_opt -> type_specifier .

    TIMES           reduce using rule 7 (type_specifier_opt -> type_specifier .)
    LPAREN          reduce using rule 7 (type_specifier_opt -> type_specifier .)
    ID              reduce using rule 7 (type_specifier_opt -> type_specifier .)
    SEMI            reduce using rule 7 (type_specifier_opt -> type_specifier .)


state 9

    (8) type_specifier_opt -> empty .

    TIMES           reduce using rule 8 (type_specifier_opt -> empty .)
    LPAREN          reduce using rule 8 (type_specifier_opt -> empty .)
    ID              reduce using rule 8 (type_specifier_opt -> empty .)
    SEMI            reduce using rule 8 (type_specifier_opt -> empty .)


state 10

    (11) type_specifier -> VOID .

    TIMES           reduce using rule 11 (type_specifier -> VOID .)
    LPAREN          reduce using rule 11 (type_specifier -> VOID .)
    ID              reduce using rule 11 (type_specifier -> VOID .)
    SEMI            reduce using rule 11 (type_specifier -> VOID .)
    RPAREN          reduce using rule 11 (type_specifier -> VOID .)


state 11

    (12) type_specifier -> CHAR .

    TIMES           reduce using rule 12 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 12 (type_specifier -> CHAR .)
    ID              reduce using rule 12 (type_specifier -> CHAR .)
    SEMI            reduce using rule 12 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 12 (type_specifier -> CHAR .)


state 12

    (13) type_specifier -> INT .

    TIMES           reduce using rule 13 (type_specifier -> INT .)
    LPAREN          reduce using rule 13 (type_specifier -> INT .)
    ID              reduce using rule 13 (type_specifier -> INT .)
    SEMI            reduce using rule 13 (type_specifier -> INT .)
    RPAREN          reduce using rule 13 (type_specifier -> INT .)


state 13

    (14) type_specifier -> FLOAT .

    TIMES           reduce using rule 14 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 14 (type_specifier -> FLOAT .)
    ID              reduce using rule 14 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 14 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 14 (type_specifier -> FLOAT .)


state 14

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    SEMI            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 15

    (5) function_definition -> type_specifier_opt declarator . compound_statement
    (92) init_declarator -> declarator .
    (93) init_declarator -> declarator . EQUALS initializer
    (99) compound_statement -> . LBRACE block_item_list_opt RBRACE

    COMMA           reduce using rule 92 (init_declarator -> declarator .)
    SEMI            reduce using rule 92 (init_declarator -> declarator .)
    EQUALS          shift and go to state 28
    LBRACE          shift and go to state 29

    compound_statement             shift and go to state 27

state 16

    (86) decl_body -> type_specifier_opt init_declarator_list_opt .

    SEMI            reduce using rule 86 (decl_body -> type_specifier_opt init_declarator_list_opt .)


state 17

    (15) declarator -> pointer . direct_declarator
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (25) direct_declarator -> . identifier
    (30) identifier -> . ID

    LPAREN          shift and go to state 22
    ID              shift and go to state 25

    direct_declarator              shift and go to state 30
    identifier                     shift and go to state 23

state 18

    (16) declarator -> direct_declarator .
    (22) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (24) direct_declarator -> direct_declarator . LPAREN identifier_list_opt RPAREN

    EQUALS          reduce using rule 16 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 16 (declarator -> direct_declarator .)
    COMMA           reduce using rule 16 (declarator -> direct_declarator .)
    SEMI            reduce using rule 16 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 16 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 31
    LPAREN          shift and go to state 32


state 19

    (88) init_declarator_list_opt -> init_declarator_list .
    (91) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 88 (init_declarator_list_opt -> init_declarator_list .)
    COMMA           shift and go to state 33


state 20

    (89) init_declarator_list_opt -> empty .

    SEMI            reduce using rule 89 (init_declarator_list_opt -> empty .)


state 21

    (17) pointer -> TIMES .
    (18) pointer -> TIMES . pointer
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer

    LPAREN          reduce using rule 17 (pointer -> TIMES .)
    ID              reduce using rule 17 (pointer -> TIMES .)
    TIMES           shift and go to state 21

    pointer                        shift and go to state 34

state 22

    (21) direct_declarator -> LPAREN . declarator RPAREN
    (15) declarator -> . pointer direct_declarator
    (16) declarator -> . direct_declarator
    (17) pointer -> . TIMES
    (18) pointer -> . TIMES pointer
    (21) direct_declarator -> . LPAREN declarator RPAREN
    (22) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (23) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (24) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (25) direct_declarator -> . identifier
    (30) identifier -> . ID

    TIMES           shift and go to state 21
    LPAREN          shift and go to state 22
    ID              shift and go to state 25

    declarator                     shift and go to state 35
    pointer                        shift and go to state 17
    direct_declarator              shift and go to state 18
    identifier                     shift and go to state 23

state 23

    (25) direct_declarator -> identifier .

    LBRACKET        reduce using rule 25 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 25 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 25 (direct_declarator -> identifier .)
    LBRACE          reduce using rule 25 (direct_declarator -> identifier .)
    COMMA           reduce using rule 25 (direct_declarator -> identifier .)
    SEMI            reduce using rule 25 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 25 (direct_declarator -> identifier .)


state 24

    (90) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 90 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 90 (init_declarator_list -> init_declarator .)


state 25

    (30) identifier -> ID .

    LBRACKET        reduce using rule 30 (identifier -> ID .)
    LPAREN          reduce using rule 30 (identifier -> ID .)
    EQUALS          reduce using rule 30 (identifier -> ID .)
    LBRACE          reduce using rule 30 (identifier -> ID .)
    COMMA           reduce using rule 30 (identifier -> ID .)
    SEMI            reduce using rule 30 (identifier -> ID .)
    RPAREN          reduce using rule 30 (identifier -> ID .)
    PLUSPLUS        reduce using rule 30 (identifier -> ID .)
    MINUSMINUS      reduce using rule 30 (identifier -> ID .)
    TIMES_EQUALS    reduce using rule 30 (identifier -> ID .)
    DIV_EQUALS      reduce using rule 30 (identifier -> ID .)
    MOD_EQUALS      reduce using rule 30 (identifier -> ID .)
    PLUS_EQUALS     reduce using rule 30 (identifier -> ID .)
    MINUS_EQUALS    reduce using rule 30 (identifier -> ID .)
    TIMES           reduce using rule 30 (identifier -> ID .)
    DIV             reduce using rule 30 (identifier -> ID .)
    MOD             reduce using rule 30 (identifier -> ID .)
    PLUS            reduce using rule 30 (identifier -> ID .)
    MINUS           reduce using rule 30 (identifier -> ID .)
    LT              reduce using rule 30 (identifier -> ID .)
    LTE             reduce using rule 30 (identifier -> ID .)
    GT              reduce using rule 30 (identifier -> ID .)
    GTE             reduce using rule 30 (identifier -> ID .)
    EQ              reduce using rule 30 (identifier -> ID .)
    NOT_EQUAL       reduce using rule 30 (identifier -> ID .)
    AND             reduce using rule 30 (identifier -> ID .)
    OR              reduce using rule 30 (identifier -> ID .)
    RBRACKET        reduce using rule 30 (identifier -> ID .)
    ID              reduce using rule 30 (identifier -> ID .)
    RBRACE          reduce using rule 30 (identifier -> ID .)


state 26

    (87) declaration -> decl_body SEMI .

    VOID            reduce using rule 87 (declaration -> decl_body SEMI .)
    CHAR            reduce using rule 87 (declaration -> decl_body SEMI .)
    INT             reduce using rule 87 (declaration -> decl_body SEMI .)
    FLOAT           reduce using rule 87 (declaration -> decl_body SEMI .)
    TIMES           reduce using rule 87 (declaration -> decl_body SEMI .)
    LPAREN          reduce using rule 87 (declaration -> decl_body SEMI .)
    ID              reduce using rule 87 (declaration -> decl_body SEMI .)
    SEMI            reduce using rule 87 (declaration -> decl_body SEMI .)
    $end            reduce using rule 87 (declaration -> decl_body SEMI .)
    LBRACE          reduce using rule 87 (declaration -> decl_body SEMI .)
    IF              reduce using rule 87 (declaration -> decl_body SEMI .)
    WHILE           reduce using rule 87 (declaration -> decl_body SEMI .)
    FOR             reduce using rule 87 (declaration -> decl_body SEMI .)
    BREAK           reduce using rule 87 (declaration -> decl_body SEMI .)
    RETURN          reduce using rule 87 (declaration -> decl_body SEMI .)
    ASSERT          reduce using rule 87 (declaration -> decl_body SEMI .)
    PRINT           reduce using rule 87 (declaration -> decl_body SEMI .)
    READ            reduce using rule 87 (declaration -> decl_body SEMI .)
    PLUSPLUS        reduce using rule 87 (declaration -> decl_body SEMI .)
    MINUSMINUS      reduce using rule 87 (declaration -> decl_body SEMI .)
    ADDRESS         reduce using rule 87 (declaration -> decl_body SEMI .)
    PLUS            reduce using rule 87 (declaration -> decl_body SEMI .)
    MINUS           reduce using rule 87 (declaration -> decl_body SEMI .)
    NOT             reduce using rule 87 (declaration -> decl_body SEMI .)
    INT_CONST       reduce using rule 87 (declaration -> decl_body SEMI .)
    CHAR_CONST      reduce using rule 87 (declaration -> decl_body SEMI .)
    FLOAT_CONST     reduce using rule 87 (declaration -> decl_body SEMI .)
    STRING          reduce using rule 87 (declaration -> decl_body SEMI .)
    RBRACE          reduce using rule 87 (declaration -> decl_body SEMI .)


state 27

    (5) function_definition -> type_specifier_opt declarator compound_statement .

    VOID            reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    CHAR            reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    INT             reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    FLOAT           reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    TIMES           reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    LPAREN          reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    ID              reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    SEMI            reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)
    $end            reduce using rule 5 (function_definition -> type_specifier_opt declarator compound_statement .)


state 28

    (93) init_declarator -> declarator EQUALS . initializer
    (94) initializer -> . assignment_expression
    (95) initializer -> . LBRACE initializer_list RBRACE
    (96) initializer -> . LBRACE initializer_list COMMA RBRACE
    (70) assignment_expression -> . binary_expression
    (71) assignment_expression -> . unary_expression assignment_operator assignment_expression
    (32) binary_expression -> . cast_expression
    (33) binary_expression -> . binary_expression TIMES binary_expression
    (34) binary_expression -> . binary_expression DIV binary_expression
    (35) binary_expression -> . binary_expression MOD binary_expression
    (36) binary_expression -> . binary_expression PLUS binary_expression
    (37) binary_expression -> . binary_expression MINUS binary_expression
    (38) binary_expression -> . binary_expression LT binary_expression
    (39) binary_expression -> . binary_expression LTE binary_expression
    (40) binary_expression -> . binary_expression GT binary_expression
    (41) binary_expression -> . binary_expression GTE binary_expression
    (42) binary_expression -> . binary_expression EQ binary_expression
    (43) binary_expression -> . binary_expression NOT_EQUAL binary_expression
    (44) binary_expression -> . binary_expression AND binary_expression
    (45) binary_expression -> . binary_expression OR binary_expression
    (48) unary_expression -> . postfix_expression
    (49) unary_expression -> . PLUSPLUS unary_expression
    (50) unary_expression -> . MINUSMINUS unary_expression
    (51) unary_expression -> . unary_operator cast_expression
    (46) cast_expression -> . unary_expression
    (47) cast_expression -> . LPAREN type_specifier RPAREN cast_expression
    (52) postfix_expression -> . primary_expression
    (53) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (54) postfix_expression -> . postfix_expression LPAREN argument_expression RPAREN
    (55) postfix_expression -> . postfix_expression LPAREN RPAREN
    (56) postfix_expression -> . postfix_expression PLUSPLUS
    (57) postfix_expression -> . postfix_expression MINUSMINUS
    (78) unary_operator -> . ADDRESS
    (79) unary_operator -> . TIMES
    (80) unary_operator -> . PLUS
    (81) unary_operator -> . MINUS
    (82) unary_operator -> . NOT
    (59) primary_expression -> . identifier
    (60) primary_expression -> . constant
    (61) primary_expression -> . string_constant
    (62) primary_expression -> . LPAREN expression RPAREN
    (30) identifier -> . ID
    (63) constant -> . INT_CONST
    (64) constant -> . CHAR_CONST
    (65) constant -> . FLOAT_CONST
    (58) string_constant -> . STRING

    LBRACE          shift and go to state 38
    PLUSPLUS        shift and go to state 46
    MINUSMINUS      shift and go to state 47
    LPAREN          shift and go to state 49
    ADDRESS         shift and go to state 51
    TIMES           shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    NOT             shift and go to state 52
    ID              shift and go to state 25
    INT_CONST       shift and go to state 56
    CHAR_CONST      shift and go to state 57
    FLOAT_CONST     shift and go to state 58
    STRING          shift and go to state 59

    initializer                    shift and go to state 36
    assignment_expression          shift and go to state 37
    binary_expression              shift and go to state 39
    unary_expression               shift and go to state 40
    cast_expression                shift and go to state 41
    postfix_expression             shift and go to state 45
    unary_operator                 shift and go to state 48
    primary_expression             shift and go to state 50
    identifier                     shift and go to state 53
    constant                       shift and go to state 54
    string_constant                shift and go to state 55

state 29
